--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 
 .profile {
     border-radius: 50%;
+    width:
 }
 h1 {
 
@@ -45,19 +46,35 @@ h2 {
     vertical-align:middle;
 }
 .menu{
-    list-style: none;
-    position: absolute;
-    top: 10px;
-    right: 30px;
+  background: white;
+  width: 100%;
+  margin-top: 0px;
+    position: fixed;
+    top: 0px;
     z-index: 10;
     cursor: pointer;
 }
 .links{
-    float: left;
+    display: inline;
     padding-top: 5px;
     padding-left: 9px;
     padding-right: 9px;
     padding-bottom: 5px;
     font-family:fantasy;
     font-size: 20px;
+}
+.links:hover{
+    font-size: 25px;
+    text-decoration: underline;
+}
+#writings a{
+    text-decoration: underline !important;
+    color: aquamarine !important;
+}
+#contact{
+    background:#f28fff;
+   
+}
+.contact_1 h3{
+ display: inline;       
 }
